1994-06-23  dickey@clark.net

	* src/newpath/newpath.c: ULTRIX has no 'strdup()'

1994-06-22  dickey@clark.net

	* src/newpath/newpath.c:
	CLIX compiler warning about possibly uninitialized 'point' variable

1994-06-17  dickey@clark.net

	* src/realpath/realpath.c: RCS_BASE

1994-06-07  dickey@clark.net

	* src/newpath/newpath.c:
	corrected an error in Append that caused it to also remove

1994-06-06  Thomas E. Dickey  <dickey@clark.net>

	* src/cpd/cpd.c:
	took out the apollo-specific __STDCPP_ ifdef, so this can always act as
	a sys5-touch if named appropriately.

1994-06-02  dickey@clark.net

	* src/newpath/newpath.c: added some traces

	* src/newpath/newpath.c:
	corrected the 'Remove()' code to remove _all_ entries with the same name

	* src/newpath/newpath.c: RCS_BASE

1994-05-31  dickey@clark.net

	* src/isatty/isatty.c: RCS_BASE

1991-10-29  Thomas E. Dickey  <dickey@software.org>

	* src/cpd/cpd.c: RCS_BASE

1990-04-23  Thomas E. Dickey  <dickey@software.org>

	* src/sue/sue.c: RCS_BASE
